optimised the code with the thread safe operations and addition of the SQL with the docker.